--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Urban
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">We build websites</h2>
-		<p class="subtext editable">This is the <strong>Urban</strong> template from <a href="https://cloudcannon.com/">CloudCannon</a>. Urban is a strong foundation for the web presence of your agency.</p>
+		
+		<p class="subtext editable"><strong>Dubai Gold Coin</strong> (DGC) is a cutting edge blockchain Project, with the aim to develop a revolutionary decentralized platform for trading gold and other precious metals and for receiving gold and precious metals markets information.</p>
 		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
 	</div>
 </section>
