--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: Urban
 <section class="diagonal patterned">
 	<div class="container halves">
 		<div>
-			<h3 class="editable">Some of our work</h3>
-			<p class="editable">We take pride in our previous work and our happy customers. We cater to any sector to boost business and increase exposure.</p>
-			<p class="editable"><a href="{{ site.baseurl }}/portfolio/">View Full Portfolio &rarr;</a></p>
+			<h3 class="editable">Innovative</h3>
+			<p class="editable">DGC is one of the first projects, which combines blockchain technologies, a gold and precious metal trading decentralized platform, and real production sector with high transparency and fair distribution of the profit.</p>
+			
 		</div>
 		<div>
 			<ul class="image-grid">
@@ -36,8 +36,8 @@ title: Urban
 			</ul>
 		</div>
 		<div>
-			<h3 class="editable">Latest software, greatest perfomance</h3>
-			<p class="editable">As a new agency we get reap the benefits of the latest and greatest. We build our websites with the most up to date technology. This ensures your website is fast, efficient and reliable for many years.</p>
+			<h3 class="editable">Linked Data</h3>
+			<p class="editable">Smart tags track the entire supply chain process from point of origin to final clients.</p>
 		</div>
 	</div>
 </section>
