--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Urban
 		<div>
 			<ul class="image-grid">
 				{% for client in site.clients limit: 4 %}
-					<li><a href="{{ site.baseurl }}{{ client.url }}"><img src="{% include relative-src.html src=client.image_path %}"></a></li>
+					<li><img src="{{ site.baseurl }}/images/innovative-img.svg" width="250" style="margin-bottom: 40px;"></li>
 				{% endfor %}
 			</ul>
 		</div>
