--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ title: Urban
 			
 		</div>
 		<div>
-			<ul class="image-grid">
-				{% for client in site.clients limit: 1 %}
+			<ul class="image-list">
+				
 					<li><img src="{{ site.baseurl }}/images/innovative-img.svg" width="250" style="margin-bottom: 40px;"></li>
-				{% endfor %}
+			
 			</ul>
 		</div>
 	</div>
