--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: DGC
 	<div class="container halves">
 		<div>
 			<ul class="image-list">
-				<li><img src="{{ site.baseurl }}/images/data-image.svg" width="250" style="margin-bottom: 40px;"></li>
+				<li><img src="{{ site.baseurl }}/images/data-img.svg" width="250" style="margin-bottom: 40px;"></li>
 		
 			</ul>
 		</div>
